# easy-vm-cloud

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  env.example
crates/agent/: Cargo.toml
crates/agent/src/: config.rs  main.rs
crates/agent/src/hypervisor/: manager.rs  mod.rs
crates/agent/src/metrics/: collector.rs  mod.rs
crates/agent/src/network/: bridge.rs  manager.rs  mod.rs
crates/agent/src/node/: mod.rs
crates/agent/src/storage/: driver.rs  manager.rs  mod.rs  nfs.rs
crates/agent/src/ws/: client.rs  handler.rs  mod.rs
crates/agent/systemd/: vm-agent.service
crates/common/: Cargo.toml
crates/common/src/: errors.rs  lib.rs
crates/common/src/models/: mod.rs
crates/common/src/utils/: mod.rs
crates/common/src/ws_rpc/: client.rs  error.rs  message.rs  mod.rs  server.rs  types.rs
crates/server/: Cargo.toml
crates/server/migrations/: 00001_schema.sql  00002_data.sql  00002_nodes.sql  00003_vms.sql  00004_storage.sql  00005_networks.sql  00006_tasks.sql  00007_audit_logs.sql
crates/server/src/: app_state.rs  config.rs  main.rs  middleware.rs
crates/server/src/api/: auth.rs  department.rs  mod.rs  networks.rs  nodes.rs  permission.rs  role.rs  snapshots.rs  storage.rs  user.rs  user_department.rs  utils.rs  vms.rs
crates/server/src/auth/: mod.rs  rbac.rs
crates/server/src/db/: mod.rs
crates/server/src/db/models/: ip_allocation.rs  mod.rs  network.rs  node.rs  role.rs  snapshot.rs  storage_pool.rs  task.rs  vm.rs  volume.rs
crates/server/src/services/: department_service.rs  mod.rs  network_service.rs  node_service.rs  snapshot_service.rs  storage_service.rs  task_service.rs  user_department_service.rs  user_service.rs  vm_service.rs
crates/server/src/ws/: agent_manager.rs  frontend_handler.rs  handler.rs  mod.rs
docs/: architecture-design.md  network-guide.md  project_structure.md  quick-start.md  vms.md  volume_snapshot.md  websocket-rpc-protocol.md
frontend/: angular.json  proxy.conf.json
frontend/src/: index.html
frontend/src/app/: app.html  app.routes.ts  app.scss  app.ts  icons-provider.ts
frontend/src/app/pages/network/: network.component.html  network.component.scss  network.component.ts  network.routes.ts
frontend/src/app/pages/nodes/: nodes.component.html  nodes.component.scss  nodes.component.ts  nodes.routes.ts
frontend/src/app/pages/permissions/departments/: departments.component.html
frontend/src/app/pages/permissions/permissions/: permissions.component.ts
frontend/src/app/pages/permissions/roles/: roles.component.ts
frontend/src/app/pages/permissions/users/: users.component.ts
frontend/src/app/pages/storage/: storage.component.html  storage.component.scss  storage.component.ts  storage.routes.ts
frontend/src/app/pages/storage/snapshots/: snapshots.component.html  snapshots.component.scss  snapshots.component.ts
frontend/src/app/pages/storage/storage-pools/: storage-pools.component.html  storage-pools.component.scss  storage-pools.component.ts
frontend/src/app/pages/storage/storage-volumes/: storage-volumes.component.html  storage-volumes.component.scss  storage-volumes.component.ts
frontend/src/app/pages/vms/: vms.component.html  vms.component.scss  vms.component.ts  vms.routes.ts
frontend/src/app/pages/welcome/: welcome.html  welcome.scss  welcome.ts
frontend/src/app/services/: network.service.ts  node.service.ts  snapshot.service.ts  storage.service.ts  vm.service.ts  websocket.service.ts
scripts/: apiclient.sh  createdb.sh  install.sh  package.sh
