[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/server",
    "crates/agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Easy VM Cloud Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"

# Web framework (Server)
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (Server)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.27"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Authentication (Server)
jsonwebtoken = "9.3"
bcrypt = "0.16"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Redis (Server, optional)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Libvirt bindings (Agent)
virt = { version = "0.3" }

# OpenTelemetry
opentelemetry = "0.27"
opentelemetry-prometheus = "0.17"
prometheus = "0.13"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"

# Utilities
lazy_static = "1.5"
once_cell = "1.20"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Async utilities
futures = "0.3"

